# flame_rt

./: CMakeLists.txt  LICENSE  README.md
app/: readme.md
app/jobber/: instance.hpp
dep/: Licenses.md
examples/01_lifecycle/: lifecycle.cpp  lifecycle_nonperiodic.cpp  lifecycle_periodic.cpp
include/flame/: core.hpp  flame.hpp  interface.hpp  task.hpp  version.hpp
include/flame/core/: api.hpp  platform.hpp  task.hpp  version.hpp
include/flame/extra/: singleton.hpp
include/flame/interface/: database.hpp  log.hpp
tools/burner/: Makefile  burner_entry.cc  cli.cc  cli.hpp  database.cc  def.hpp  instance.cc  instance.hpp  manager.cc  manager.hpp
